--- a/Presenter/PresenterControl.xaml
+++ b/Presenter/PresenterControl.xaml
@@ -6,13 +6,95 @@
         xmlns:local="clr-namespace:Presenter"
         mc:Ignorable="d"
         Topmost="True"
+        Closing="Window_Closing"
         Title="Presentation Controls" Height="280" Width="522">
     <Grid>
-        <Button Content="Prev" HorizontalAlignment="Left" Margin="28,39,0,0" VerticalAlignment="Top" Height="64" Width="125" Click="Prev_Slide"/>
-        <Button Content="Play" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="92,182,0,0" RenderTransformOrigin="0.86,-0.959" Height="52" Width="115" Click="Play_Media"/>
-        <Button Content="Next" HorizontalAlignment="Left" Margin="367,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.133,0.835" Height="64" Width="125" Click="Next_Slide"/>
-        <Button Content="Pause" HorizontalAlignment="Left" Margin="212,182,0,0" VerticalAlignment="Top" Height="52" Width="113" Click="Pause_Media"/>
-        <Button Content="Restart" HorizontalAlignment="Left" Margin="330,182,0,0" VerticalAlignment="Top" Height="52" Width="113" Click="Replay_Media"/>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Button Content="Prev" Click="Prev_Slide" Grid.Column="0" Margin="5,5,5,5"/>
+            <Button Content="Next" Click="Next_Slide" Grid.Column="1" Margin="5,5,5,5"/>
+
+            <Grid Grid.Column="2">
+                <Label Name="slidenumview_label" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Content="1/0"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" Height="Auto">
+            <Grid Name="MediaControls">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Button Content="Play" Click="Play_Media" Grid.Row="0" Grid.Column="0" Margin="5,5,5,5"/>
+                <Button Content="Pause" Click="Pause_Media" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5"/>
+                <Button Content="Restart" Click="Replay_Media" Grid.Row="0" Grid.Column="2" Margin="5,5,5,5"/>
+
+                <Grid Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal">
+                        <Label Content="T+ "></Label>
+                        <Label Name="Media_at" FontStyle="Oblique">00:00</Label>
+                        <Label Content=" / "></Label>
+                        <Label Name="Media_length" FontStyle="Oblique">00:00</Label>
+                    </StackPanel>
+                </Grid>
+                <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
+                    <Label Grid.Row="1">T-</Label>
+                    <Label Name="Media_rem">00:00</Label>
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <local:MediaPlayer x:Name="NowSlide" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0"></local:MediaPlayer>
+                    <Border Grid.Row="0" Grid.Column="0" Panel.ZIndex="1" BorderBrush="Black" BorderThickness="2,2,2,2">
+                        <local:MediaPlayer x:Name="PrevSlide" Panel.ZIndex="1"></local:MediaPlayer>
+                    </Border>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <local:MediaPlayer x:Name="NextSlide" Grid.Column="0"></local:MediaPlayer>
+                    <local:MediaPlayer x:Name="AfterSlide" Grid.Column="1"></local:MediaPlayer>
+                </Grid>
+            </Grid>
+        </Grid>
+
+
 
     </Grid>
 </Window>
