--- a/Presenter/MediaPlayer.xaml
+++ b/Presenter/MediaPlayer.xaml
@@ -7,8 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <MediaElement Name="videoPlayer" LoadedBehavior="Manual" UnloadedBehavior="Close" ScrubbingEnabled="True"></MediaElement>
-        <Image Name="imagePlayer"></Image>
-        <Rectangle Name="BlackSource" Fill="Black"></Rectangle>
+        <MediaElement Name="videoPlayer" Panel.ZIndex="10" LoadedBehavior="Manual" UnloadedBehavior="Close" ScrubbingEnabled="True"></MediaElement>
+        <Image Name="imagePlayer" Panel.ZIndex="10"></Image>
+        <Rectangle Name="BlackSource" Panel.ZIndex="10" Fill="Black"></Rectangle>
+        <Rectangle Name="GrayBack" Panel.ZIndex="0" Fill="Gray"></Rectangle>
     </Grid>
 </UserControl>
