--- a/Presenter/PresenterWindow.xaml
+++ b/Presenter/PresenterWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Closing="Window_Closing"
         KeyDown="Window_KeyDown"
-        Title="Presenter" Height="450" Width="800">
+        Title="Amature Presenter Output" Height="450" Width="800">
     <Grid>
         <local:MediaPlayer x:Name="mediaPlayer"></local:MediaPlayer>
     </Grid>
